--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@astrojs/mdx": "^4.3.12",
+    "@astrojs/node": "^9.0.0",
     "@astrojs/react": "^4.4.2",
     "@fontsource-variable/nunito-sans": "^5.2.7",
     "@hookform/resolvers": "^5.2.2",
@@ -52,6 +53,7 @@
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.555.0",
+    "@google/generative-ai": "^0.21.0",
     "next-themes": "^0.4.6",
     "react": "^19.2.0",
     "react-day-picker": "^9.11.3",
